--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Tko je Ron Šarić?</h2>
-							<p> Iako je rođen pred mnogo ljeta u Rijeci, Ron Šarić i dalje je beba! Kako? Nitko ne zna - ali upravo to je jedna od stvari zbog koje je upravo on najbolji pas! I najbolja beba!</p>
+							<p> Iako je rođen davne 2010. godine, Ron Šarić i dalje je beba! Kako? Nitko ne zna - ali upravo to je jedna od stvari zbog koje je upravo on najbolji pas! I najbolja beba!</p>
 							<ul class="actions stacked">
 								<li><a href="#second" class="button big wide smooth-scroll-middle">Ronova akademska karijera</a></li>
 							</ul>
