--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 							<h2>Ron je jako lijep!</h2>
 							<p>Uz sve ostalo, Ron je i jako JAKO lijep pas. Čak je bio i na natjecanju ljepote. Nije potrebno ni spominjati- da je bio pobjednik- i tada je dobio titulu najljepšeg psa na svijetu! Bravo Ron!</p>
 							<p>Uživajte u njegovoj ljepoti i saznajte više o Ronu!</p>
+							<p><i>Page made with HTML5 UP! template</i></p>
 						</div>
 
 						<!-- Gallery -->
